run marmot using fast_rao
Signed-off-by: Philippe Edwards <philippe.edwards@rte-france.com>