@@ -17,6 +17,7 @@ import com.powsybl.openrao.searchtreerao.result.api.FlowResult;
 import org.junit.jupiter.api.Test;
 import org.mockito.Mockito;
 
+import java.util.Collections;
 import java.util.List;
 import java.util.Optional;
 import java.util.Set;
@@ -56,6 +57,6 @@ class MinMarginViolationEvaluatorTest {
         MinMarginViolationEvaluator evaluator = new MinMarginViolationEvaluator(Set.of(flowCnec), Unit.MEGAWATT, new BasicMarginEvaluator());
         CostEvaluatorResult result = evaluator.evaluate(flowResult, null);
         assertEquals(0.0, result.getCost(Set.of()));
-        assertEquals(List.of(flowCnec), result.getCostlyElements(Set.of()));
+        assertEquals(Collections.emptyList(), result.getCostlyElements(Set.of()));
     }
 }
